# MiniSolver

./: .clang-format  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  DEBUG_README.md  FINAL_STATUS.md  LICENSE  PROGRESS_UPDATE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTORING_REMAINING_WORK.md  REFACTORING_SUMMARY.md  build.sh  convert_test_models.py  requirements-lock.txt  requirements.txt  run_benchmark.sh  run_custom_benchmark.sh  run_demo.sh  score_performance.py
.github/workflows/: ci.yml
cmake/embedded/: smoke.cpp
cmake/toolchains/: arm-cortex-m4.cmake
docs/: README.md  ROADMAP.md  matrix-kernel-benchmark-notes.md  review-fix-plan-2026-05-02.md  solver-refactor-plan.md  test-coverage-gaps-2026-05-02.md  testing-matrix.md
docs/adr/: 0001-matrix-backend.md  0002-filter-line-search-switching.md  0003-minisolver-matrix-kernels.md  0004-solver-strategy-boundaries.md
docs/architecture/: agent-harness.md  api-logger-boundary-design.md  contract-driven-development-plan.md  globalization-mehrotra-theory-plan.md  model-update-callback-design.md  scaling-normalization-design.md  snapshot-replay-design.md  soft-constraint-weight-api-plan.md  solver-capability-adoption-plan.md  solver-development-principles.md  solver-refactor-plan.md  solver-status-semantics.md  termination-design.md  warm-start-strategy.md
docs/archive/: legacy-debug-notes.md
docs/contracts/: README.md  _template.md  backend-contract.md  barrier-mu-contract.md  build-config-contract.md  config-api-contract.md  constraint-packets-contract.md  contract-id-policy.md  diagnostics-contract.md  direction-refinement-contract.md  explicit-integrator-contract.md  filter-line-search-contract.md  finite-check-boundary-contract.md  generated-packets-contract.md  hard-constraints-contract.md  implicit-integrator-contract.md  initialization-contract.md  line-search-contract.md  logging-profiling-contract.md  matrix-backend-contract.md  memory-allocation-contract.md  merit-line-search-contract.md  minimodel-codegen-contract.md  model-callback-contract.md  model-interface-contract.md  numerical-jacobian-contract.md  parameter-contract.md  postsolve-contract.md  regularization-contract.md  residual-contract.md  restoration-contract.md  riccati-contract.md  row-scaling-contract.md  scaling-contract.md  snapshot-replay-contract.md  soc-contract.md  soft-constraints-contract.md  solve-loop-contract.md  solver-info-contract.md  status-semantics-contract.md  (+3 more)
docs/matrix/: gpu-aligned-route-microbench.md  gpu-batched-factor-microbench.md  gpu-batched-lqr-riccati-microbench.md  gpu-batched-scalar-riccati-microbench.md  gpu-block-lft-scan-microbench.md  gpu-block-tridiag-factor-microbench.md  gpu-full-kkt-factor-microbench.md  gpu-generated-packet-upload-microbench.md  gpu-prefix-scan-microbench.md  gpu-route-triage.md  gpu-scalar-riccati-scan-microbench.md  matrix-policy-guide.md
docs/modules/: README.md  _template.md  alg-barrier.md  alg-initialization.md  alg-line-search.md  alg-model-evaluation.md  alg-termination.md  core-config.md  core-semantics.md  core-trajectory.md  core-types.md  debug-snapshot.md  integrator.md  matrix.md  model-codegen.md  module-inventory.md  runtime.md  solver-line-search-utils.md  solver-riccati.md  solver-route.md  testing.md
docs/reviews/: overdesign-ledger.md  review-fix-plan-2026-05-02-deep.md  review-fix-plan-2026-05-02.md  review-triage-checklist.md  review_2026-05-01.md  review_2026-05-02-deep.md  review_2026-05-02.md
docs/testing/: contract-coverage-matrix.md  contract-rollout-completion-audit.md  replay-corpus-plan.md  test-coverage-gaps-2026-05-02.md  testing-matrix.md
examples/: README.md
examples/01_car_tutorial/: CMakeLists.txt  generate_model.py  main.cpp  run_custom_benchmark.sh
examples/02_advanced_bicycle/: CMakeLists.txt  advanced_benchmark.cpp  advanced_debug.cpp  generate_advanced_model.py  main_benchmark.cpp  main_debug.cpp  run_benchmark.sh  run_debug.sh
examples/03_line_search_benchmark/: CMakeLists.txt  generate_model.py  main.cpp
examples/03_model_update_callback/: CMakeLists.txt  main.cpp
examples/04_dcol_two_cars/: CMakeLists.txt  generate_model.py  main.cpp
include/: config.h
include/algorithms/: line_search.h  (+2 more)
scripts/: check_arm_size_budget.sh
src/: main.cpp
tests/: bugfix_common.h  solver_internal_access.h  test_advanced.cpp  test_asset_regressions.cpp  test_autodiff.cpp  test_backend.cpp  test_barrier_residual_contract.cpp  test_bugfixes.cpp  test_car_model_basic.cpp  test_config_profiles.cpp  test_config_regressions.cpp  test_coordinate_scaling.cpp  test_different_soft_constraints.cpp  test_different_soft_constraints.cpp.bak  test_direction_refinement.cpp  test_features.cpp  test_filter_pareto.cpp  test_implicit_sparse_riccati.cpp  test_integrator.cpp  test_ir.cpp  test_line_search.cpp  test_linesearch_merit.cpp  test_logger.cpp  test_logic.cpp  test_matrix.cpp  test_memory.cpp  test_mini_matrix.cpp  test_minimodel_generation.py  test_property_regressions.cpp  test_reference_config.h  test_replay_corpus.cpp  test_restoration_penalty.cpp  test_riccati.cpp  test_riccati_robust.cpp  test_robustness.cpp  test_rti_lite.cpp  test_scaling_regressions.cpp  test_serializer.cpp  test_soc.cpp  test_soft_constraints.cpp  (+6 more)
tools/: MiniModel.py  README.md  auto_tuner.cpp  barrier_fusion_bench.cpp  benchmark_solver.cpp  block_copy_bench.cpp  car_model_gen.py  check_docs_freshness.py  check_harness_commit.py  codegen.py  cuda_batched_factor_bench.cu  cuda_batched_lqr_riccati_bench.cu  cuda_batched_scalar_riccati_bench.cu  cuda_block_lft_scan_bench.cu  cuda_block_tridiag_factor_bench.cu  cuda_full_kkt_factor_bench.cu  cuda_generated_packet_upload_bench.cu  cuda_scalar_riccati_scan_bench.cu  implicit_lu_bench.cpp  implicit_sparse_riccati_bench.cpp  install_harness_commit_hook.sh  line_search_rollout_bench.cpp  merit_armijo_bench.cpp  mini_matrix_vs_eigen_bench.cpp  parallel_scan_gpu_bench.cu  plot_trajectory.py  replay_solver.cpp  riccati_mode_bench.cpp  scaling_bench.cpp  warm_start_bench.cpp
(+86 files in other folders)
